--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "Magnet Link Extractor",
+  "name": "Magnet Muncher: Grab 'em All!",
   "version": "1.0.0",
-  "description": "Extracts magnet links from the current page.",
+  "description": "Hungry for magnets? Let Magnet Muncher satisfy your cravings! This cheeky extension chomps through web pages, gobbling up every magnet link in sight. Say goodbye to hunting and hello to convenience with Magnet Muncher – the snappiest way to collect your favorite torrents!",
   "homepage_url": "https://fnlsg.in",
 
   "icons": {
     "16": "icons/icon-16.png",
-    "32": "icons/icon-48.png",
-    "64": "icons/icon-128.png"
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "host_permissions": ["*://*/*"],
   "permissions": ["scripting"],
   "action": {
     "default_icon": "icons/icon-48.png",
-    "default_title": "Magnet Link Extractor",
-    "default_popup": "popup/popup.html"
+    "default_title": "Magnet Muncher: Grab 'em All!",
+    "default_popup": "popup.html"
   }
 }
